# ai-agents-homeworks

1/: .env  ReadMe.md  main.py  pyproject.toml  result.txt
2/: n8n-workflow-with-db-and-tools.json
3/: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  memory.py  pyproject.toml  test_agent.py  test_memory.py
3/tools/: __init__.py  tools.py
4/: CLAUDE.md  README.md  env.py  main.py  pyproject.toml  q_table_mountaincar.npy  setup.py  training.py
