[project]
name = "mountain-car-qlearning"
version = "0.1.0"
description = "Q-learning agent for MountainCar climbing task"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.1",
    "matplotlib>=3.10.6",
    "numpy>=1.24.0",
    "pygame>=2.6.1",
]
